--- a/.github/workflows/andriod.yaml
+++ b/.github/workflows/andriod.yaml
@@ -2,37 +2,31 @@ name: Android CI
 
 on:
   push:
-    branches: [ main ]
+    branches: [ "main" ]
   pull_request:
-    branches: [ main ]
+    branches: [ "main" ]
 
 jobs:
   build:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
-      with:
-        path: OrlaJournal  # force correct casing
+    - uses: actions/checkout@v3
 
     - name: Set up JDK 17
       uses: actions/setup-java@v3
       with:
-        distribution: 'temurin'
         java-version: '17'
+        distribution: 'temurin'
 
-    - name: Make gradlew executable
-      working-directory: ./OrlaJournal
-      run: chmod +x ./gradlew
-
-    - name: Debug workspace
-      working-directory: ./OrlaJournal
-      run: |
-        pwd
-        ls -la
-        cat settings.gradle || echo "No settings.gradle found"
+    - name: Grant execute permission for gradlew
+      run: chmod +x gradlew
 
     - name: Build Debug APK
-      working-directory: ./OrlaJournal
       run: ./gradlew assembleDebug
+
+    - name: Upload APK
+      uses: actions/upload-artifact@v4
+      with:
+        name: orlasjournal-debug-apk
+        path: app/build/outputs/apk/debug/app-debug.apk
