--- a/.github/workflows/andriod.yaml
+++ b/.github/workflows/andriod.yaml
@@ -26,7 +26,7 @@ jobs:
       run: ./gradlew assembleDebug
 
     - name: List APK Files
-      run: find app/build/outputs -name "*.apk" -exec echo "Found: {}" \;
+      run: ls -la app/build/outputs/apk/debug/
 
     - name: Upload APK
       uses: actions/upload-artifact@v4
