--- a/.github/workflows/andriod.yaml
+++ b/.github/workflows/andriod.yaml
@@ -1,32 +1,25 @@
-name: Android CI
+name: Android CI Debug
 
-on:
-  push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
+on: [push]
 
 jobs:
-  build:
+  debug:
     runs-on: ubuntu-latest
-
+    
     steps:
     - uses: actions/checkout@v3
-
-    - name: Set up JDK 17
-      uses: actions/setup-java@v3
-      with:
-        java-version: '17'
-        distribution: 'temurin'
-
-    - name: Grant execute permission for gradlew
-      run: chmod +x gradlew
-
-    - name: Build with Gradle (with output)
-      run: ./gradlew assembleDebug --stacktrace --info
-
-    - name: Check build directory structure
-      run: find . -name "build" -type d | head -10
-
-    - name: List project root
-      run: ls -la
+    
+    - name: Setup Android SDK
+      uses: android-actions/setup-android@v2
+      
+    - name: Check Android environment
+      run: |
+        echo "=== Gradle version ==="
+        ./gradlew --version
+        echo "=== Android SDK check ==="
+        if [ -d "$ANDROID_HOME" ]; then
+          echo "ANDROID_HOME: $ANDROID_HOME"
+          ls $ANDROID_HOME
+        else
+          echo "ANDROID_HOME not set"
+        fi
