--- a/.github/workflows/andriod.yaml
+++ b/.github/workflows/andriod.yaml
@@ -1,25 +1,32 @@
-name: Android CI Debug
+name: Android CI
 
-on: [push]
+on:
+  push:
+    branches: [ "main" ]
+  pull_request:
+    branches: [ "main" ]
 
 jobs:
-  debug:
+  build:
     runs-on: ubuntu-latest
-    
+
     steps:
     - uses: actions/checkout@v3
-    
-    - name: Setup Android SDK
-      uses: android-actions/setup-android@v2
-      
-    - name: Check Android environment
-      run: |
-        echo "=== Gradle version ==="
-        ./gradlew --version
-        echo "=== Android SDK check ==="
-        if [ -d "$ANDROID_HOME" ]; then
-          echo "ANDROID_HOME: $ANDROID_HOME"
-          ls $ANDROID_HOME
-        else
-          echo "ANDROID_HOME not set"
-        fi
+
+    - name: Set up JDK 17
+      uses: actions/setup-java@v3
+      with:
+        java-version: '17'
+        distribution: 'temurin'
+
+    - name: Make gradlew executable
+      run: chmod +x ./gradlew
+
+    - name: Build Debug APK
+      run: ./gradlew assembleDebug
+
+    - name: Upload APK
+      uses: actions/upload-artifact@v4
+      with:
+        name: orlasjournal-debug-apk
+        path: app/build/outputs/apk/debug/app-debug.apk
