--- a/.github/workflows/andriod.yaml
+++ b/.github/workflows/andriod.yaml
@@ -12,6 +12,12 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
+    
+    - name: Download known-good Gradle wrapper
+      run: |
+        wget -O gradle-wrapper.jar https://repo.maven.apache.org/maven2/gradle/wrapper/gradle-wrapper/3.1/gradle-wrapper-3.1.jar
+        mkdir -p gradle/wrapper
+        mv gradle-wrapper.jar gradle/wrapper/
 
     - name: Set up JDK 17
       uses: actions/setup-java@v3
@@ -19,16 +25,11 @@ jobs:
         java-version: '17'
         distribution: 'temurin'
 
-    - name: Setup Android SDK
-      uses: android-actions/setup-android@v2
-
     - name: Make gradlew executable
       run: chmod +x ./gradlew
 
-    - name: Build with Gradle Wrapper
-      uses: gradle/gradle-build-action@v2
-      with:
-        arguments: assembleDebug
+    - name: Build Debug APK
+      run: ./gradlew assembleDebug
 
     - name: Upload APK
       uses: actions/upload-artifact@v4
