--- a/.github/workflows/andriod.yaml
+++ b/.github/workflows/andriod.yaml
@@ -11,29 +11,23 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v3
-    
-    - name: Download correct Gradle wrapper for 7.5
-      run: |
-        # Download the wrapper JAR compatible with Gradle 7.5
-        wget -O gradle-wrapper.jar https://repo.maven.apache.org/maven2/com/gradle/wrapper/gradle-wrapper/7.5/gradle-wrapper-7.5.jar
-        mkdir -p gradle/wrapper
-        mv gradle-wrapper.jar gradle/wrapper/
+      - name: Checkout repository
+        uses: actions/checkout@v3
 
-    - name: Set up JDK 17
-      uses: actions/setup-java@v3
-      with:
-        java-version: '17'
-        distribution: 'temurin'
+      - name: Set up JDK 17
+        uses: actions/setup-java@v3
+        with:
+          java-version: '17'
+          distribution: 'temurin'
 
-    - name: Make gradlew executable
-      run: chmod +x ./gradlew
+      - name: Grant execute permission for gradlew
+        run: chmod +x gradlew
 
-    - name: Build Debug APK
-      run: ./gradlew assembleDebug
+      - name: Build Debug APK
+        run: ./gradlew assembleDebug
 
-    - name: Upload APK
-      uses: actions/upload-artifact@v4
-      with:
-        name: orlasjournal-debug-apk
-        path: app/build/outputs/apk/debug/app-debug.apk
+      - name: Upload APK
+        uses: actions/upload-artifact@v4
+        with:
+          name: orlasjournal-debug-apk
+          path: app/build/outputs/apk/debug/app-debug.apk
